[tool.poetry]
name = "cloud"
version = "0.1.0"
description = ""
authors = ["AulonSal <aulonsal@gmail.com>"]
license = "UNLICENSE"

[tool.poetry.dependencies]
python = "^3.9"
ansible = "^3.0.0"
fabric = "^2.6.0"

[tool.poetry.dev-dependencies]
ipython = "^7.21.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
